Revert "fix(React core): Popup placement accounts for target margin, target margin is no longer collapsed"
This reverts commit 77127109069634605ad45fd42a43e010bb6da04b.

Fix button

--- a/apps/react/demo/src/ui/ExampleControls/styles.css
+++ b/apps/react/demo/src/ui/ExampleControls/styles.css
@@ -3,3 +3,8 @@
   width: 100%;
   padding: var(--spacing-horizontal-small) var(--spacing-vertical-small);
 }
+
+.ds.example-controls__config-button {
+  /* Configure button has collapsed margins - add margin bottom to make it consistent with other buttons */
+  margin-bottom: var(--spacing-vertical-small);
+}
