--- a/packages/react/ds-core/src/ui/Tooltip/common/TooltipArea/styles.css
+++ b/packages/react/ds-core/src/ui/Tooltip/common/TooltipArea/styles.css
@@ -4,5 +4,10 @@
     cursor: pointer;
     position: relative;
     display: inline-block;
+
+    & > * {
+      /* The tooltip targets must have no margin in order for tooltip placements to work correctly */
+      margin: 0 !important;
+    }
   }
 }
